--- a/back/pom.xml
+++ b/back/pom.xml
@@ -29,7 +29,7 @@
 		<connection/>
 		<developerConnection/>
 		<tag/>
-		<url>https://github.com/aflouat/P6-MDD-MVP-une-application-full-stack.git</url>
+		<url>https://github.com/aflouat/ycyw_poc.git</url>
 	</scm>
 	<properties>
 		<java.version>22</java.version>
@@ -51,12 +51,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+<!--Postgres-->
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<version>9.1.0</version>
-			<scope>runtime</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.8</version>
 		</dependency>
 
 		<dependency>
