--- a/.github/workflows/ci-cd-backend.yml
+++ b/.github/workflows/ci-cd-backend.yml
@@ -30,6 +30,9 @@ jobs:
         run: |
           cd back
           ./mvnw clean verify
+            - name: Prepare mvnw
+        run: |
+          chmod +x back/mvnw || true
       # publish code coverage to GITHUB with artifact
       - name: Upload code coverage to GitHub
         uses: actions/upload-artifact@v4
