--- a/.github/workflows/ci-cd-backend.yml
+++ b/.github/workflows/ci-cd-backend.yml
@@ -5,10 +5,12 @@ on:
     branches: [ "main" ]
     paths:
       - 'back/**'
+      - '.github/workflows/ci-cd-backend.yml'
   pull_request:
     branches: [ "main" ]
     paths:
     - 'back/**'
+    - '.github/workflows/ci-cd-backend.yml'
 
 jobs:
 
