--- a/back/src/test/resources/application-test.properties
+++ b/back/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.application.name=MDD - Monde De Developpement
+spring.application.name=Your car Your Way tests
 # MySQL Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.username=sa
@@ -33,9 +33,13 @@ logging.level.org=WARN
 logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-jwt.secret=test
+# 32-byte key "abcdefghijklmnopqrstuvwxyzABCDEF" base64-encoded
+jwt.secret=YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXpBQkNERUY=
 jwt.expirationMs=18000000
 
 server.hostname=localhost
 server.port=3001
 server.protocol=http
+
+# Intercom Identity secret for tests (>=32 bytes)
+intercom.identity.secret=test_intercom_identity_secret_for_tests_which_is_long_enough_123456
