--- a/back/src/main/resources/sonar-project.properties
+++ b/back/src/main/resources/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=com.openclassrooms:ycywapp-back
+sonar.projectKey=aflouat_ywyc-poc-v1
 sonar.organization=aflouat
 sonar.host.url=https://sonarcloud.io
 sonar.sourceEncoding=UTF-8
