--- a/back/pom.xml
+++ b/back/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.openclassrooms</groupId>
 	<artifactId>ycyw-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>ycyw-backend</name>
 	<description>POC for Your Car Your Way</description>
 	<licenses>
@@ -29,7 +29,7 @@
 		<connection/>
 		<developerConnection/>
 		<tag/>
-		<url>https://github.com/aflouat/ycyw_poc.git</url>
+		<url>https://github.com/aflouat/ywyc-poc-v1.git</url>
 	</scm>
 	<properties>
 		<java.version>22</java.version>
