--- a/.github/workflows/ci-cd-backend.yml
+++ b/.github/workflows/ci-cd-backend.yml
@@ -45,14 +45,7 @@ jobs:
 
       - name: SonarQube Scan - Backend
         working-directory: back
-        run: >
-          
-          ./mvnw -B -ntp
-          org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar
-           -Dsonar.host.url=https://sonarcloud.io
-           -Dsonar.organization=aflouat
-           -Dsonar.projectKey=aflouat_ywyc-poc-v1
-           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=aflouat_ywyc-poc-v1 -Dsonar.host.url=https://sonarcloud.io -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
