--- a/.github/workflows/ci-cd-frontend.yml
+++ b/.github/workflows/ci-cd-frontend.yml
@@ -26,6 +26,12 @@ jobs:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: 'front/package-lock.json'
+      # ✅ clé anti-bug rollup/npm: lockfile Linux
+      - name: Recreate Linux-specific lockfile
+        working-directory: front
+        run: |
+          rm -f package-lock.json
+          npm install --package-lock-only --ignore-scripts
       - name: Install & build Angular
         run: |
           cd front          
