--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCI --code-coverage"
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadless --code-coverage"
   },
   "private": true,
   "dependencies": {
@@ -36,12 +36,15 @@
     "@angular/compiler-cli": "^19.0.3",
     "@types/jasmine": "~5.1.0",
     "@types/jwt-decode": "^3.1.0",
+    "cross-env": "^10.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-junit-reporter": "^2.0.1",
+    "puppeteer": "^24.22.3",
     "typescript": "~5.5.2"
   }
 }
