--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -31,8 +31,8 @@ logging.level.org.springframework.security.web.authentication.AnonymousAuthentic
 logging.level.org.springframework=WARN
 logging.level.com=WARN
 logging.level.org=WARN
-logging.level.com.openclassrooms.ycywapi = debug
-logging.level.org.springframework.security=debug
+logging.level.com.openclassrooms.ycywapi = info
+logging.level.org.springframework.security=info
 
 
 jwt.secret=${JWT_SECRET}
