--- a/.github/workflows/ci-cd-backend.yml
+++ b/.github/workflows/ci-cd-backend.yml
@@ -49,3 +49,16 @@ jobs:
 
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: |
+          docker build -t aflouat/ycywapp-back:latest -f back/Dockerfile back
+
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker tag aflouat/ycywapp-back:latest aflouat/ycyw-back:${{ github.sha }}
+          docker push aflouat/ycywapp-back:${{ github.sha }}
+          docker push aflouat/ycywapp-back:latest
