--- a/.github/workflows/ci-cd-backend.yml
+++ b/.github/workflows/ci-cd-backend.yml
@@ -59,6 +59,6 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: |
-          docker tag aflouat/ycywapp-back:latest aflouat/ycyw-back:${{ github.sha }}
+          docker tag aflouat/ycywapp-back:latest aflouat/ycywapp-back:${{ github.sha }}
           docker push aflouat/ycywapp-back:${{ github.sha }}
           docker push aflouat/ycywapp-back:latest
